# UE5-Source-Query

./: .coverage  .deployments_registry.json  .gitattributes  .gitignore  .indexignore  .ue5query.example  .ue5query_deploy.example.json  CLAUDE.md  GEMINI.md  GUI_TOOLS.md  PLAN.md  README.md  Setup.bat  add-directory.bat  ask.bat  ask.sh  bootstrap.py  configure.bat  create_dist.bat  install.bat  install_helper.py  launcher.bat  launcher.sh  manage-directories.bat  manage.bat  pyproject.toml  rebuild-index.bat  requirements-gpu.txt  requirements.txt  test_output.json  update.bat
.claude/: settings.local.json
config/: .env.template  deployment_rules.json  gui_prefs.json
data/: schema.sql  vector_meta.json
docs/: ADAPTIVE_BATCH_SIZING.md  AI_AGENT_GUIDE.md  AUDIT_REPORT.md  CLAUDE.md  DEFERRED_TASKS.md  DEPLOYMENT.md  DEPLOYMENT_ARCHITECTURE_PLAN.md  ENHANCED_GPU_OPTIMIZATION.md  GPU_SUPPORT.md  HYBRID_QUERY_GUIDE.md  IMPROVEMENT_ROADMAP.md  PHASE_5_RELATIONSHIP_EXTRACTION.md  PROJECT_STRUCTURE.md  UNIFIED_GUI_PLAN.md
examples/: batch_results.jsonl  sample_batch_queries.jsonl
installer/: README.md  gui_deploy.py
tests/: DEPLOYMENT_TEST_RESULTS.md  __init__.py  conftest.py  run_import_tests.bat  run_tests.py  test_agent_integration.py  test_ai_context.py  test_ai_service.py  test_api_load.py  test_api_server.py  test_dashboard_views.py  test_db_queries.py  test_deployment.bat  test_deployment_config.py  test_deployment_detection.py  test_engine_helper.py  test_engine_normalization.py  test_environment_detector.py  test_gui_layout.py  test_gui_scaling_integration.py  test_gui_smoke.py  test_hybrid_schema.py  test_query_intent.py  test_relational_engine.py  test_relational_search.py  test_source_optimization.py  test_universal_imports.py  test_update_integration.py  test_version_matching.py  validate_gui_launch.py
tools/: README.md  check-paths.bat  check_enrichment.py  fix-paths.bat  health-check.bat  migrate_json_to_db.py  monitor_resources.py  profile_query.py  provision.ps1  rebuild-index.bat  run-tests.bat  serve.bat  setup-git-lfs.bat  update.py
ue5_query/: __init__.py
ue5_source_query.egg-info/: PKG-INFO  SOURCES.txt  (+3 more)
(+169 files in other folders)
