[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ue5-source-query"
version = "2.1.0"
description = "Intelligent hybrid search system for Unreal Engine 5 source code"
authors = [
  { name = "Developer", email = "dev@example.com" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "sentence-transformers>=2.2.2",
    "anthropic>=0.18.1",
    "numpy>=1.24.3",
    "tk>=0.1.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.1",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "packaging>=23.2",
    "pynvml>=11.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
