[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ue5-source-query"
version = "2.1.0"
description = "Hybrid semantic and definition search for Unreal Engine 5 source code"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "User", email = "user@example.com"}
]
keywords = ["unreal-engine", "search", "semantic-search", "embeddings", "tool"]
dependencies = [
    "sentence-transformers>=2.2.0",
    "anthropic>=0.7.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.0.0",
    "python-dotenv>=1.0.0",
    "nvidia-ml-py>=12.535.0",
    "tqdm>=4.65.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "isort",
    "mypy"
]

[project.scripts]
ue5-query = "ue5_query.core.hybrid_query:main"
ue5-dashboard = "ue5_query.management.gui_dashboard:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ue5_query*"]
namespaces = true